public/lite/api/zh-CN/r1.8/_sources/generate/program_listing_file_include_converter_include_core_ir_named.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_converter_include_core_ir_named.h:

Program Listing for File named.h
================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_converter_include_core_ir_named.h>` (``include/converter/include/core/ir/named.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   
   #ifndef MINDSPORE_CORE_IR_NAMED_H_
   #define MINDSPORE_CORE_IR_NAMED_H_
   
   #include <string>
   #include <memory>
   #include <functional>
   
   #include "ir/anf.h"
   
   namespace mindspore {
   class MS_CORE_API Named : public Value {
    public:
     explicit Named(const std::string &name) : name_(name), hash_id_(std::hash<std::string>{}(name)) {}
     Named(const Named &other) : Value(other) {
       this->name_ = other.name_;
       hash_id_ = std::hash<std::string>{}(other.name_);
     }
     ~Named() override = default;
     MS_DECLARE_PARENT(Named, Value);
     const std::string &name() const { return name_; }
     virtual bool operator==(const Named &other) const { return name_ == other.name(); }
     bool operator==(const Value &other) const override;
     virtual Named &operator=(const Named &other) {
       if (&other != this) {
         this->type_ = other.type_;
         this->name_ = other.name_;
         hash_id_ = std::hash<std::string>{}(name_);
       }
       return *this;
     }
     std::size_t Hash() const { return hash_id_; }
     std::size_t hash() const override { return hash_id_; }
     friend std::ostream &operator<<(std::ostream &os, const Named &nmd) {
       os << nmd.name();
       return os;
     }
     std::string ToString() const override { return name(); }
   
    private:
     std::string name_;
     std::size_t hash_id_;
   };
   using NamedPtr = std::shared_ptr<Named>;
   struct MS_CORE_API NamedHasher {
     std::size_t operator()(NamedPtr const &name) const {
       std::size_t hash = name->Hash();
       return hash;
     }
   };
   struct MS_CORE_API NamedEqual {
     bool operator()(NamedPtr const &t1, NamedPtr const &t2) const {
       MS_EXCEPTION_IF_NULL(t1);
       MS_EXCEPTION_IF_NULL(t2);
       return *t1 == *t2;
     }
   };
   class MS_CORE_API None final : public Named {
    public:
     None() : Named("None") {}
     ~None() override = default;
     MS_DECLARE_PARENT(None, Named);
     abstract::AbstractBasePtr ToAbstract() override;
   };
   GVAR_DEF(NamedPtr, kNone, std::make_shared<None>());
   
   class MS_CORE_API Null final : public Named {
    public:
     Null() : Named("Null") {}
     ~Null() override = default;
     MS_DECLARE_PARENT(Null, Named);
     abstract::AbstractBasePtr ToAbstract() override;
   };
   GVAR_DEF(NamedPtr, kNull, std::make_shared<Null>());
   
   class MS_CORE_API Ellipsis final : public Named {
    public:
     Ellipsis() : Named("Ellipsis") {}
     ~Ellipsis() override = default;
     MS_DECLARE_PARENT(Ellipsis, Named);
     abstract::AbstractBasePtr ToAbstract() override;
   };
   GVAR_DEF(NamedPtr, kEllipsis, std::make_shared<Ellipsis>());
   }  // namespace mindspore
   #endif  // MINDSPORE_CORE_IR_NAMED_H_
